--- a/style.css
+++ b/style.css
@@ -9,31 +9,53 @@ body {
     align-items: center;     /* eje horizontal */
 
     height: 100vh;
+    overflow-y: hidden;
+    overflow-x: hidden;
+    background-color: black;
+
 }
 
 .metronomo {
     display: flex;
     flex-direction: column;
+    justify-content: space-evenly;
 
-    gap: 10px;          
-    padding: 10px;
-
-    border: 1px solid rgb(0,0,0);
-    border-radius: 6px;
-
-    width: 300px
+    width: 90%;
+    height: 90%;
 }
 
 .input {
     width: 100%;
+    height: 20%;
+    
     padding: 4px;
     text-align: center;
     box-sizing: border-box;
+    
+    font-size: 60px;
+    font-weight: bold;
+    font-family: arial ;
+    color: white;
+    
+    border: 1px solid black;
+    border-radius: 50px;
+    border-color: white;
+    background-color: transparent;
+
+    outline: none;
 }
 
 .button {
     width: 100%;
+    height: 20%;
+    
     padding: 6px;
     cursor: pointer;
     box-sizing: border-box;
+    
+    font-family: Arial, Helvetica, sans-serif;
+    font-size: 25px;
+    font-weight: bold;
+
+    border-radius: 50px;
 }
